--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Group Blog",
   "main": "server.js",
+  "engines": {
+    "node": "7.0.0"
+  },
+  "private": true,
   "scripts": {
     "clean": "rm -rf dist && rm -rf node_modules",
     "heroku-prebuild": "scripts/deployment_react.sh",
