--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Group Blog",
   "main": "server.js",
   "engines": {
-    "node": "7.0.0"
+    "node": "6.6.0"
   },
   "private": true,
   "scripts": {
@@ -32,8 +32,6 @@
     "cloudinary": "^1.4.6",
     "connect-history-api-fallback": "^1.3.0",
     "cookie-parser": "^1.4.3",
-    "dotenv": "^2.0.0",
-    "eslint": "^3.11.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jsonwebtoken": "^7.1.9",
@@ -41,9 +39,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "path": "^0.12.7",
-    "pg-promise": "^5.4.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "pg-promise": "^5.4.4"
   },
   "devDependencies": {
     "babel": "^6.5.2",
