--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "path": "^0.12.7",
-    "pg-promise": "^5.4.4"
+    "pg-promise": "^5.4.4",
+    "dotenv": "^2.0.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
